# todo-assistant

./: .env_example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  run.py  streamlit_app.py
.github/workflows/: static_analysis.yml
scripts/: run.py  run_visualized.py
todo_assistant/: assistant.py  prompts.py  settings.py
todo_assistant/agents/: base.py  todo_api.py  todo_api_assistant.py  todo_assistant.py
todo_assistant/agents/todo_api_assistant/: __init__.py  agent.py  output_parser.py
todo_assistant/agents/todo_assistant/: __init__.py  agent.py  output_parser.py
todo_assistant/api_clients/: base.py  notion.py
todo_assistant/assistant/: assistant.py  callbacks.py  response.py
todo_assistant/di_containers/: agents.py  application.py  graph_builders.py  tools.py
todo_assistant/entities/: task.py
todo_assistant/graphs/: base.py  todo_api.py  todo_assistant.py
todo_assistant/graphs/base/: graph_builder.py  nodes.py
todo_assistant/tools/: retrieval.py  search_task_id_by_name.py
todo_assistant/tools/api_calls/: add.py  delete.py  update.py
todo_assistant/utils/: visualization.py
